# agh-habitat-pl

./: kopia_agh_habitat_pl.ipynb
notebooks/: agh_habitat_pl2.ipynb  kopia_agh_habitat_pl.ipynb
src/habitat_pl/: pyproject.toml
